--- a/service-packs/azure/public_linux_server/service-pack.yml
+++ b/service-packs/azure/public_linux_server/service-pack.yml
@@ -1,4 +1,4 @@
-resource_pack:
+service_pack:
   name: "Public Linux Server"
   description: "A single VM, running Linux with a publically accessible IP address assigned"
   resources:
