--- a/service-packs/azuread/app_registration/service-pack.yml
+++ b/service-packs/azuread/app_registration/service-pack.yml
@@ -1,4 +1,4 @@
-resource_pack:
+service_pack:
   name: "Application Registration"
   description: "Register an application [client] in Azure AD, to provide authentication and authorization using OAuth / OpenID etc"
   resources:
