--- a/playbooks/service-pack-block.yml
+++ b/playbooks/service-pack-block.yml
@@ -15,3 +15,5 @@
       template:
         src: "{{ core_path }}/variables.yml.j2"
         dest: "{{ output_path }}/{{ item.name }}/variables.yml"
+    - include_vars: "null-vars.yml"
+
